# skopos

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
infra/: deploy.sh  elastic.yaml  kibana.yaml
skopos/: Cargo.toml  build.rs
skopos-common/: Cargo.toml
skopos-common/src/: lib.rs
skopos-ebpf/: Cargo.toml
skopos-ebpf/src/: main.rs  vmlinux.rs
skopos/src/: es.rs  main.rs
