[package]
name = "skopos-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]
aya = ["dep:aya"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
[lib]
path = "src/lib.rs"
