[package]
name = "skopos-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
skopos-common = { path = "../skopos-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "skopos"
path = "src/main.rs"
